--- a/src/asciimon.tex
+++ b/src/asciimon.tex
@@ -1437,13 +1437,13 @@ const T = ENEMY_TOP_RECT[1];
 const B = ENEMY_BOT_RECT[3];
 
 const FIELD_HEIGHT_H = (T - B) / 2.0;
-const SIZE_H = (FIELD_HEIGHT_H / FIELD_HEIGHT) * 2.0;
+%const SIZE_H = (FIELD_HEIGHT_H / FIELD_HEIGHT) * 2.0;
 const FIELD_WIDTH_H = (R - L) / 2.0;
 
 const CENTER_P = [163, 456];
 const CENTER_E = [L + FIELD_WIDTH_H, B + FIELD_HEIGHT_H];
-const START = [CENTER_P[0] - SIZE_H, CENTER_P[1] + SIZE_H, CENTER_P[0] + SIZE_H, CENTER_P[1] - SIZE_H];
-const END = [CENTER_E[0] - SIZE_H, CENTER_E[1] + SIZE_H, CENTER_E[0] + SIZE_H, CENTER_E[1] - SIZE_H];
+%const START = [CENTER_P[0] - SIZE_H, CENTER_P[1] + SIZE_H, CENTER_P[0] + SIZE_H, CENTER_P[1] - SIZE_H];
+%const END = [CENTER_E[0] - SIZE_H, CENTER_E[1] + SIZE_H, CENTER_E[0] + SIZE_H, CENTER_E[1] - SIZE_H];
 
 const ATK_DURATION = 15;
 const ATK_ANIMATION_SPEED = 75;
@@ -1455,189 +1455,220 @@ const POS = 1;
 const SYMB = 2;
 const ROTATION = 3;
 const MASS = 4;
+const MOMENTUM = 5;
 
-var particles = Array.apply(null, Array(ATK_ANIM_CELLS)).map(_ => [DEAD, [0, 0, 0, 0], 0, 0, 2]);
+const X = 0;
+const Y = 1;
+
+var particles = Array.apply(null, Array(ATK_ANIM_CELLS)).map(_ => [DEAD, [0, 0], 0, 0, 2, [0, 0]]);
 
 var particleSys = {
     iterationCount: ATK_DURATION - 1,
     iterationCur: 0,
     aliveParticles: 0,
+    % TODO this is in one direction -> (FIELD_HEIGHT_H / FIELD_HEIGHT)
+    particleRadius: FIELD_WIDTH_H / FIELD_HEIGHT,
     particleCount: FIELD_WIDTH,
     particleSymbols: ["X"],
     particleLifetime: ATK_DURATION - 1,
     particleMultiline: false,
-    particleBold: false
+    particleBold: false,
+    gravity: [0, -9.81],
+    force: [0, 5],
+    energyReduction: 0.45,
+    % FUNCTIONS
+    emit: function(p) {
+        particles[p][STATE]++;
+        this.aliveParticles++;
+        initParticleField(p);
+        return true;
+    },
+    remove: function(p) {
+        hideParticleField(p);
+        particles[p][STATE] = DEAD;
+        this.aliveParticles--;
+    }
 };
 
-const X = 0;
-const Y = 1;
-var momentum = [0, 1];
-var velocity=null;
-const GRAVITY = [0, -9.81];
-%const MASS = 1;
-var FORCE = [0, 5];
-
-% https://gamedev.stackexchange.com/questions/10277/equation-for-bouncing-graph
+/**
+ * Very similar to an implementation that can be found here:
+ * https://gamedev.stackexchange.com/questions/10277/equation-for-bouncing-graph
+ */
 function applyGravityToParticle(p) {
+    const s = particleSys.particleRadius;
+    const g = particleSys.gravity;
+    const f = particleSys.force;
+    const m = particles[p][MASS];
+    var pos = particles[p][POS];
+    var mom = particles[p][MOMENTUM];
 
-    var position = [0, particles[p][POS][1] - SIZE_H];
-
-    momentum = [momentum[X] + GRAVITY[X] + FORCE[X], momentum[Y] + GRAVITY[Y] + FORCE[Y]];
-    velocity = [momentum[X] / particles[p][MASS], momentum[Y] / particles[p][MASS]];
-    position = [position[X] + velocity[X], position[Y] + velocity[Y]];
+    % Momentum += gravity + force
+    mom = [mom[X] + g[X] + f[X], mom[Y] + g[Y] + f[Y]];
+    % Velocity = momentum / mass
+    var v = [mom[X] / m, mom[Y] / m];
+    % Position += velocity
+    pos = [pos[X] + v[X], pos[Y] + v[Y]];
 
     % If position is at floor & momentum heading downward
-    if (position[Y] < B && momentum[Y] < 0) {
-        position[Y] = B;
+    if (pos[Y] < B + s && mom[Y] < 0) {
+        pos[Y] = B + s;
         % Bouncing off direction
         var collisionNormal = [0, 1];
-        var dot = momentum[X] * collisionNormal[X] + momentum[Y] * collisionNormal[Y];
+        var dot = mom[X] * collisionNormal[X] + mom[Y] * collisionNormal[Y];
         % Reflect
-        % momentum = momentum.subtr(collisionNormal.mu(2 * dot));
-        momentum = [momentum[X] - collisionNormal[X] * 2 * dot, momentum[Y] - collisionNormal[Y] * 2 * dot];
+        mom = [mom[X] - collisionNormal[X] * 2 * dot, mom[Y] - collisionNormal[Y] * 2 * dot];
         % Energy loss from bounce.
-        const energyReduction = 0.45
-        momentum = [momentum[X] * energyReduction, momentum[Y] * energyReduction];
+        mom = [mom[X] * particleSys.energyReduction, mom[Y] * particleSys.energyReduction];
     }
 
-    return position[Y];
+    particles[p][MOMENTUM] = mom;
+    return pos;
 }
 
 function attackAnimation(type) {
-    if (type == T_STONE || true) {
-        particleSys.iterationCount = (ATK_DURATION - 1) * 2;
-        particleSys.particleLifetime = (ATK_DURATION - 1) * 2;
-        %particleSys.particleSymbols = ["X", "A", "C"];
-        %particleSys.particleSymbols = ["###\n ###"];%"_\n /M\\\n \\W/"];%, "<>", "_\n |_|"];
-        particleSys.particleSymbols = ["[##]\n [##]", "\n ####", "\n ## #", "\n #  #", "\n #   #", "\n #    #"];
-        %"_\n /M\\\n \\W/"];%, "<>", "_\n |_|"];
-        particleSys.particleMultiline = true;
-        particleSys.particleCount = 1;
-
-        particleSys.emit = function(p) {
-            % if (getRandomInt(100) > 1) {
-            %     return false;
-            % }
-            var xPos = (L + SIZE_H) + getRandomInt((FIELD_WIDTH_H - SIZE_H) * 2.0);
-            var pos = [
-                (L + SIZE_H) + (FIELD_WIDTH_H - SIZE_H) * 2.0 * 0.35,
-                (L + SIZE_H) + (FIELD_WIDTH_H - SIZE_H) * 2.0 * 0.5,
-                (L + SIZE_H) + (FIELD_WIDTH_H - SIZE_H) * 2.0 * 0.65
-            ];
-
-            var xPos = pos[p \% particleSys.particleCount];
-            var xRect = [xPos - SIZE_H, T, xPos + SIZE_H, T];
-
-            particles[p][STATE]++;
-            particles[p][POS] = xRect;
-            %particles[p][SYMB] = getRandomInt(particleSys.particleSymbols.length);
-            particles[p][SYMB] = 0;
-            this.aliveParticles++;
-
-            initParticleField(p);
-            return true;
-        };
-
-        particleSys.remove = function(p) {
-            hideParticleField(p);
-            particles[p][STATE] = DEAD;
-            this.aliveParticles--;
-        };
-
-        % Falling stones move function
-        particleSys.move = function(l, p) {
-            % var yPos = (1.0 - l) * (T - SIZE_H) + l * (B + SIZE_H + 1);
-            % particles[p][POS][1] = yPos + SIZE_H;
-            % particles[p][POS][3] = yPos - SIZE_H - 1;
-
-            var pY = applyGravityToParticle(p);
-            particles[p][POS][1] = pY + SIZE_H;
-            particles[p][POS][3] = pY - SIZE_H - 1;
-
-            if (particles[p][SYMB] > 0 && particles[p][STATE] \% 2 == 0 && particles[p][SYMB] < particleSys.particleSymbols.length - 1) {
-                particles[p][SYMB]++;
-                initParticleField(p); % TODO
-            }
-
-            if (particles[p][POS][3] <= B && particles[p][SYMB] == 0) {
-                particles[p][SYMB] = 1;
-                particles[p][MASS] = 1;
-                initParticleField(p); % TODO
-            }
-
-            % if (l >= 0.99) {
-            %     particles[p][SYMB] = 1;
-            %     initParticleField(p); % TODO
-            % }
-        };
-
-        % Shoot move function
-        % particleSys.move = function(l, p) {
-        %     for (var j = 0; j < particles[p][POS].length; j++) {
-        %         particles[p][POS][j] = START[j] * (1.0 - l) + END[j] * l;
-        %     }
-        % };
+    if (type == T_STONE && false) {
+        stoneParticles();
     } else if (type == T_WATER || true) {
-        particleSys.iterationCount = (ATK_DURATION - 1) * 2;
-        particleSys.particleLifetime = (ATK_DURATION - 1) * 4;
-        particleSys.particleSymbols = ["(", " )", "(", "(", "(", " )", " )", "(", " )", " )"];%, "~"];
-        particleSys.particleBold = true;
-        particleSys.particleCount = FIELD_WIDTH / 2.0;
-
-        particleSys.emit = function(p) {
-            var xPos = L + SIZE_H + p * SIZE_H * 2;
-            var xRect = [xPos - SIZE_H, 0, xPos + SIZE_H, 0];
-
-            particles[p][STATE]++;
-            particles[p][POS] = xRect;
-            particles[p][SYMB] = p \% particleSys.particleSymbols.length;
-            %if (p \% 3 != 2) {
-                particles[p][ROTATION] = 90;
-            %}
-            this.aliveParticles++;
-
-            initParticleField(p);
-            return true;
-        };
-
-        particleSys.remove = function(p) {
-            hideParticleField(p);
-            particles[p][STATE] = DEAD;
-            this.aliveParticles--;
-        };
-
-        particleSys.move = function(l, p) {
-            var yPos = (1.0 - l) * (B + SIZE_H + 1) + l * (T - SIZE_H);
-            particles[p][POS][1] = yPos + SIZE_H;
-            particles[p][POS][3] = yPos - SIZE_H - 1;
-
-            particles[p][SYMB] = (particles[p][SYMB] + 1) \% particleSys.particleSymbols.length;
-            % TODO dont use init here
-            initParticleField(p);
-        };
-    } else if (type == T_FIRE) {
-    } else if (type == T_AIR) {
-    } else if (type == T_FLUFF) {
-    } else if (type == T_GRASS) {
+        waterParticles();
+    % } else if (type == T_FIRE) {
+    % } else if (type == T_AIR) {
+    % } else if (type == T_FLUFF) {
+    % } else if (type == T_GRASS) {
     } else {
         % T_GHOST
-        % Circular move function
-        particleSys.move = function(l, p) {
-            const R = FIELD_WIDTH_H;
-            const ANGLE = (Math.PI * 2.0) / particles.length;
-
-            var offsetX = R * Math.cos(p * ANGLE + l * Math.PI * 2.0);
-            var offsetY = R * Math.sin(p * ANGLE + l * Math.PI * 2.0);
-            var offset = [offsetX, offsetY, offsetX, offsetY];
-
-            var pos = [0, 0, 0, 0];
-            for (var j = 0; j < pos.length; j++) {
-                particles[p][POS][j] = END[j] + (1.0 - l) * offset[j];
-            }
-        }
+        ghostParticles();
     }
 
+    % Shoot move function
+    % particleSys.move = function(l, p) {
+    %     for (var j = 0; j < particles[p][POS].length; j++) {
+    %         particles[p][POS][j] = START[j] * (1.0 - l) + END[j] * l;
+    %     }
+    % };
+
     attackInterval = app.setInterval("processParticles()", ATK_ANIMATION_SPEED);
+}
+
+function waterParticles() {
+    particleSys.iterationCount = (ATK_DURATION - 1) * 2;
+    particleSys.particleLifetime = (ATK_DURATION - 1) * 4;
+    particleSys.particleSymbols = ["(", " )", "(", "(", "(", " )", " )", "(", " )", " )", ""];
+    particleSys.particleBold = true;
+    particleSys.particleCount = FIELD_WIDTH / 2.0 + 1;
+
+    var particle = this.getField("atkanim" + 0);
+    particle.fillColor = color.white;
+
+    particleSys.emit = function(p) {
+        if (p == 0) {
+            particles[p][STATE]++;
+            particles[p][POS] = [CENTER_E[X], 0];
+            particles[p][SYMB] = particleSys.particleSymbols.length - 1;
+
+            this.aliveParticles++;
+
+            initParticleField(p);
+
+            return true;
+        }
+
+        var xPos = L + particleSys.particleRadius + (p - 1) * particleSys.particleRadius * 2.0;
+
+        particles[p][STATE]++;
+        particles[p][POS] = [xPos, 0];
+        particles[p][SYMB] = p \% (particleSys.particleSymbols.length - 1);
+        particles[p][ROTATION] = 90;
+        this.aliveParticles++;
+
+        initParticleField(p);
+        return true;
+    };
+
+    particleSys.move = function(l, p) {
+        var yPos = (1.0 - l) * (B + particleSys.particleRadius + 1) + l * (T - particleSys.particleRadius);
+        particles[p][POS][Y] = yPos;
+
+        if (p == 0) {
+            particles[p][POS][Y] = B + (yPos - B) / 2.0;
+            initParticleField(p);
+            return;
+        }
+
+        particles[p][SYMB] = (particles[p][SYMB] + 1) \% (particleSys.particleSymbols.length - 1);
+        % TODO dont use init here
+        initParticleField(p);
+    };
+}
+
+function stoneParticles() {
+    particleSys.iterationCount = (ATK_DURATION - 1) * 2;
+    particleSys.particleLifetime = (ATK_DURATION - 1) * 2;
+    particleSys.particleSymbols = ["[##]\n [##]", "\n ####", "\n ## #", "\n #  #", "\n #   #", "\n #    #"];
+    particleSys.particleMultiline = true;
+    particleSys.particleCount = 3;
+    particleSys.particleRadius = (FIELD_HEIGHT_H / FIELD_HEIGHT) * 2.0;
+
+    particleSys.emit = function(p) {
+        % if (getRandomInt(100) > 1) {
+        %     return false;
+        % }
+        %var xPos = (L + particleSys.particleRadius) + getRandomInt((FIELD_WIDTH_H - particleSys.particleRadius) * 2.0);
+        const s = (L + particleSys.particleRadius);
+        const w = (FIELD_WIDTH_H - particleSys.particleRadius) * 2.0;
+        const pos = [
+            [s + w * 0.25, T - particleSys.particleRadius],
+            [s + w * 0.5, T],
+            [s + w * 0.75, T - particleSys.particleRadius]
+        ];
+        const mom = [
+            [-2, 2],
+            [0, 2],
+            [2, 2]
+        ]
+
+        particles[p][STATE]++;
+        particles[p][POS] = pos[p \% particleSys.particleCount];
+        %particles[p][SYMB] = getRandomInt(particleSys.particleSymbols.length);
+        particles[p][SYMB] = 0;
+        particles[p][MASS] = 2;
+        particles[p][MOMENTUM] = mom[p \% particleSys.particleCount];
+        this.aliveParticles++;
+
+        initParticleField(p);
+        return true;
+    };
+
+    % Falling stones move function
+    particleSys.move = function(l, p) {
+        % var yPos = (1.0 - l) * (T - particleSys.particleRadius) + l * (B + particleSys.particleRadius + 1);
+        particles[p][POS] = applyGravityToParticle(p);
+
+        if (particles[p][SYMB] > 0 && particles[p][STATE] \% 2 == 0 && particles[p][SYMB] < particleSys.particleSymbols.length - 1) {
+            particles[p][SYMB]++;
+            initParticleField(p); % TODO
+        }
+
+        if (particles[p][POS][Y] <= B + particleSys.particleRadius && particles[p][SYMB] == 0) {
+            particles[p][SYMB] = 1;
+            particles[p][MASS] = 1;
+            initParticleField(p); % TODO
+        }
+    };
+}
+
+function ghostParticles() {
+    % Circular move function
+    particleSys.move = function(l, p) {
+        const R_X = FIELD_WIDTH_H;
+        const R_Y = FIELD_WIDTH_H;
+        const ANGLE = (Math.PI * 2.0) / particles.length;
+
+        const offsetX = R_X * Math.cos(p * ANGLE + l * Math.PI * 2.0);
+        const offsetY = R_Y * Math.sin(p * ANGLE + l * Math.PI * 2.0);
+
+        particles[p][POS][X] = CENTER_E[X] + (1.0 - l) * offsetX;
+        particles[p][POS][Y] = CENTER_E[Y] + (1.0 - l) * offsetY;
+    }
 }
 
 function processParticles() {
@@ -1671,7 +1702,13 @@ function processParticles() {
 
 function moveParticleField(p) {
     var particle = this.getField("atkanim" + p);
-    particle.rect = particles[p][POS];
+
+    const x = particles[p][POS][X];
+    const y = particles[p][POS][Y];
+    const s = particleSys.particleRadius;
+    var rect = [x - s, y + s, x + s, y - s];
+
+    particle.rect = rect;
 }
 
 function initParticleField(p) {
